Section columns no longer center align, body font set as variable, button mixin created, grid container width lowered, form styles

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,7 +18,7 @@
 }
 
 body {
-  font-family: 'Calluna-Regular';
+  font-family: $font-body;
   background-color: $color-light;
 }
 
