--- a/src/sass/base/_form.scss
+++ b/src/sass/base/_form.scss
@@ -1,20 +1,35 @@
+.frm-Form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .frm-Form_Input,
 .frm-Form_Textarea {
   display: block;
   width: 100%;
-  margin-bottom: 10px;
-  padding: 10px 0;
+  margin-bottom: 15px;
+  padding: 10px;
   appearance: none;
-  background: none;
   outline: none;
+  border-radius: 3px;
+  font-family: $font-body;
 }
 
 .frm-Form_Input {
-  border-bottom: 1px solid $color-dark;
+
+  width: calc(50% - 7.5px);
+
+  &:first-child {
+    margin-right: 15px;
+  }
+}
+
+.frm-Form_Textarea {
+  font-family: $font-body;
 }
 
 .frm-Form_Submit {
-  display: block;
+  @include button;
+  display: inline-block;
   width: 100%;
-  padding: 10px 20px;
 }
