--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -13,7 +13,6 @@
 
 .sec-Section_Columns {
   display: flex;
-  align-items: center;
 }
 
 .sec-Section_Column {
