--- a/src/sass/tools/_mixins.scss
+++ b/src/sass/tools/_mixins.scss
@@ -18,6 +18,16 @@
   margin-left: auto;
 }
 
+// Buttons
+
+@mixin button {
+  font-family: $font-body;
+  font-weight: 500;
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 3px;
+}
 
 // Fonts
 
