--- a/src/sass/tools/_variables.scss
+++ b/src/sass/tools/_variables.scss
@@ -1,4 +1,4 @@
-$grid-container: 1420px;
+$grid-container: 1360px;
 $grid-gap: 40px;
 
 // Colours
@@ -6,7 +6,9 @@ $grid-gap: 40px;
 $color-light: #f6f6f6;
 $color-dark: #3b3a36;
 
+// Fonts
 
+$font-body: 'Calluna-Regular';
 
 // dark green/blue #5a7670
 // dark grey #3b3a36
